--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -1,5 +1,5 @@
-$main: green;
-$secondary: blue;
+$main: #1aae9f;
+$secondary: #f0f4f7;
 $border-color: #dddddd;
 $star-active: gold;
 $disabled: #dddddd;
