--- a/src/assets/custom-classes.scss
+++ b/src/assets/custom-classes.scss
@@ -150,15 +150,35 @@
   padding: 3rem 0;
 }
 
+.my-1 {
+  margin: 0.25rem 0;
+}
+
+.my-2 {
+  margin: 0.5rem 0;
+}
+
+.my-3 {
+  margin: 1rem 0;
+}
+
+.my-4 {
+  margin: 2rem 0;
+}
+
+.my-5 {
+  margin: 3rem 0;
+}
+
 /* Typography */
 .font-size-default {
   font-size: 1rem;
 }
 .font-size-smaller {
-  font-size: 0.5rem;
+  font-size: 0.8rem;
 }
 .font-size-larger {
-  font-size: 2rem;
+  font-size: 1.2rem;
 }
 .font-weight-bold {
   font-weight: bold;
@@ -199,8 +219,16 @@
   background-color: $secondary;
 }
 
+.background-white {
+  background-color: $white;
+}
+
 .solid-default-border {
   border: 1px solid $border-color;
+}
+
+.solid-main-border {
+  border: 1px solid $main;
 }
 
 /* Sizing */
